# SimpleHTTPServerCPP

./: CMakeLists.txt  Client.cpp  README.md  build.sh  config.cfg  constants.h  first_time_run.sh  install.sh  main.cpp  run.sh  testResult.txt
ApplicationServer/: ApplicationServer.cpp  ApplicationServer.h  MyServer.cpp  MyServer.h  Server.h  ServerConstants.h
ApplicationServer/Requests/: RequestHandlers.h
EPollUtility/: EPollUtilities.cpp  EPollUtilities.h
HTTPServer/: HTTPServer.cpp  HTTPServer.h  HardConfig.h  RESTInformation.cpp  RESTInformation.h  ServerConstants.h  TCPSocket.cpp  TCPSocket.h
MockClients/: MockClients.cpp  MockClients.h
Server/: MyServer.cpp  MyServer.h  Server.cpp  Server.h  ServerConstants.h
Server/Requests/: RESTHandler.cpp  RESTHandler.h  RESTInformation.cpp  RESTInformation.h  RequestHandlers.cpp  RequestHandlers.h
SignalHandler/: SignalHandler.cpp  SignalHandler.h
Socket/: Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h
SocketUtility/: Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h
libs/: EPollUtility.cpp  EPollUtility.h  RFCWrapper.cpp  RFCWrapper.h  SocketUtility.cpp  SocketUtility.h  UnixStandardUtility.cpp  UnixStandardUtility.h
resources/: about.html  about.js  index.html
resources/html/: about.html  index.html
utils/: CommonUtils.h  ConfigParser.cpp  ConfigParser.h  FileUtils.cpp  FileUtils.h  OtherUtils.cpp  OtherUtils.h  ReturnStatus.h  SignalHandlers.h  ThreadPool.h  Timer.cpp  Timer.h
